# reality-capture

./: .eslintrc.json  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  beachball.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  template.env
python/: LICENSE.md  README.md  config.py  conversion.py  pyproject.toml  references.py  requirements.txt  setup.py  utils.py
python/Tests/: rdas_test.py
python/apim_utils/: code.py
python/cc_api_sdk/: __init__.py  cc_client.py  enums.py  job.py  utils.py  workspace.py
python/cc_api_wrapper/: __init__.py  cc_client.py  job.py  utils.py  workspace.py
python/contextscene/: ContextScene.py  README.md
python/deprecated/cc_api_sdk/: __init__.py  cc_client.py  enums.py  workspace.py
python/docs/: conf.py  index.rst
python/docs/service/: error.rst  index.rst  job.rst  reality_data.rst  response.rst  service.rst
python/docs/specifications/: calib_specs_adjust.py  calibration.rst  cd_specs_detect_changes_meshes.py  cd_specs_detect_changes_pc.py  change_detection.rst  constraints.rst  constraints_specs_add.py  constraints_specs_delete.py  cs_pc_location_in_file.json  eg_specs_detect_ground_meshes.py  eg_specs_detect_ground_pc.py  extract_ground.rst  fill_image_properties.rst  geometry.rst  import_pc.rst  index.rst  o2d_specs_detect_o2d_and_o3d_objects.py  o2d_specs_detect_o2d_objects.py  o2d_specs_detect_o3d_objects_given_o2d_objects.py  objects2d.rst  production.rst  reconstruction.rst  s2d_specs_project_on_mesh_given_2d_segmentation.py  s2d_specs_segment_photos.py  s2d_specs_segment_photos_and_project_on_mesh.py  s3d_specs_infer_3d_lines_given_3d_segmentation.py  s3d_specs_segment_meshes.py  s3d_specs_segment_pc.py  s3d_specs_segment_pc_and_infer_3d_lines.py  segmentation2d.rst  segmentation3d.rst  segmentation_orthophoto.rst  sortho_specs_classify_pixels.py  tiling.rst  tiling_specs_default.py  tiling_specs_options.py  touchup.rst  touchup_export.py  touchup_import.py  water_constraints.rst  (+1 more)
python/examples/: config.py  example_context_capture.py  example_context_scene_from_mesh.py  example_context_scene_from_photos.py  example_data_transfer.py  example_download_everything_in_context_scene.py  example_lines3D.py  example_modeling_full_workflow.py  example_objects2D.py  example_reality_conversion.py  example_segmentation2D.py  utils.py
python/examples/cc/: context_capture.py
python/examples/rd/: image_collection.py
python/examples/rda/: objects2D.py  segmentation2Dortho.py  segmentation2Dphotos.py
python/rd_api_sdk/: __init__.py  rd_client.py  reality_data.py  utils.py
python/rd_api_wrapper/: __init__.py  rd_client.py  utils.py
python/rda_api_sdk/: __init__.py  enums.py  job.py  rda_client.py  utils.py
python/rda_api_wrapper/: __init__.py  job.py  rda_client.py  utils.py
python/rdas_sdk/: __init__.py  job_settings.py  rdas_utils.py  references.py  service_cloud.py  service_rda.py  utils.py
python/rds_sdk/: __init__.py  service_rd.py
python/reality_apis/: __init__.py  utils.py
python/reality_apis/CCS/: __init__.py  ccs_utils.py  context_capture_service.py
python/reality_apis/DataTransfer/: README.md  __init__.py  conversion.py  reality_data_transfer.py  references.py
python/reality_apis/Examples/: example_context_capture.py  example_data_transfer.py  example_lines3D.py  example_objects2D.py
python/reality_apis/RC/: __init__.py  rcs_enums.py  rcs_settings.py  rcs_utils.py  (+1 more)
python/sdk/: __init__.py  conversion.py  reality_data_transfer.py  references.py  utils.py
python/token_factory/: token_factory.py
python_sdk/: .gitignore  README.md  coverage.json  pyproject.toml  regenerate.bat  rk.txt
python_sdk/docs/: changelog.rst  conf.py  index.rst  make.bat  overview.rst
python_sdk/examples/: README.md  example_context_capture.py  example_context_scene_from_mesh.py  example_data_transfer.py  example_modeling.py  example_objects2D.py  example_reality_conversion.py  example_test_context_scene.py  example_upload_bucket_data.py  example_upload_reality_data.py  template.env
python_sdk/tests/: test_conversion_model.py  test_data_handler.py  test_detectors.py  test_detectors.py.orig  test_doc_examples.py  test_job.py  test_job.py.orig  test_job_validator.py  test_onprem_engine.py  test_onprem_generic_manager.py  test_onprem_job_validator.py  test_onprem_jobqueue.py  test_service_base.py  test_service_bucket.py  test_service_files.py  test_service_job_crud.py  test_service_jobs.py  test_service_reality_data.py  test_specifications.py  test_version.py
(+818 files in other folders)
