[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "reality_apis"
version = "1.2.0" #TODO
authors = [
  { name="Bentley Systems" },
]
description = "This package contains a SDK for Reality Modeling, Reality Analysis and Reality Conversion iTwin APIs as well as Reality Management API utils. It provides classes, functions and examples to upload local data to ContextShare, run jobs and download the results."
readme = "README.md"
license =  {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "bottle >= 0.12",
    "oauthlib >= 3.2",
    "requests-oauthlib >= 1.3.1",
    "azure-storage-blob >= 12.9",
]

[tool.setuptools.packages.find]
exclude = ["reality_apis*docs*"]
include = ["reality_apis*", "token_factory","contextscene"]

[project.urls]
"Homepage" = "https://https://github.com/iTwin/reality-apis-samples/tree/main/python"
"Reality Analysis Api reference" = "https://developer.bentley.com/apis/realitydataanalysis/"
"Reality Modeling Api reference" = "https://developer.bentley.com/apis/contextcapture/"
"Reality Conversion Api reference" = "https://developer.bentley.com/apis/realityconversion/"
"Reality Management Api reference" = "https://developer.bentley.com/apis/reality-management/"