[build-system]
requires = [
    "setuptools == 80.9.0",
    "setuptools-scm == 8.3.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "reality_capture"
# PEP440, see https://peps.python.org/pep-0440/
version = "2.0.0rc1"
authors = [
  { name="Bentley Systems" },
]
description = "This package contains a SDK for Reality Modeling, Reality Analysis and Reality Conversion iTwin APIs as well as Reality Management API utils. It provides classes, functions and examples to upload local data to ContextShare, run jobs and download the results."
readme = "README.md"
license =  {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "bottle >= 0.12",
    "oauthlib >= 3.2",
    "requests-oauthlib >= 1.3.1",
    "azure-storage-blob >= 12.9",
    "pydantic >= 2.10.4"
]

[project.optional-dependencies]
dev = [
    "Sphinx >= 8.1.3",
    "sphinx-rtd-theme >= 3.0.2",
    "myst-parser >= 4.0.0",
    "autodoc_pydantic >= 2.2.0",
    "pytest >= 8.3.4",
    "pytest-cov >= 6.0.0",
    "responses >= 0.25.6"
]

[project.urls]
"Homepage" = "https://https://github.com/iTwin/reality-apis-samples/tree/main/python"
"Reality Analysis Api reference" = "https://developer.bentley.com/apis/realitydataanalysis/"
"Reality Modeling Api reference" = "https://developer.bentley.com/apis/contextcapture/"
"Reality Conversion Api reference" = "https://developer.bentley.com/apis/realityconversion/"
"Reality Management Api reference" = "https://developer.bentley.com/apis/reality-management/"